--- a/packages/mdc-select/mdc-select.scss
+++ b/packages/mdc-select/mdc-select.scss
@@ -17,6 +17,7 @@
 @import "@material/animation/functions";
 @import "@material/typography/mixins";
 @import "@material/theme/mixins";
+@import "@material/ripple/mixins";
 @import "@material/rtl/mixins";
 
 @mixin mdc-select-dd-arrow-svg-bg_($fill-hex-number: 000000, $opacity: .54) {
@@ -81,6 +82,28 @@
 
       background-color: rgba(white, .09);
     }
+
+    &.mdc-ripple-upgraded {
+      @include mdc-ripple-base;
+      // TODO: Add ::before as ripple bg once #194 lands
+      @include mdc-ripple-fg((pseudo: "::after", opacity: .04));
+
+      &::before {
+        top: calc(50% - var(--mdc-ripple-fg-size, 100%) / 2);
+        left: calc(50% - var(--mdc-ripple-fg-size, 100%) / 2);
+        width: var(--mdc-ripple-fg-size, 100%);
+        height: var(--mdc-ripple-fg-size, 100%);
+        transform: scale(.8);
+      }
+
+      &:hover::before {
+        transform: scale(calc(var(--mdc-ripple-fg-scale, 1) + .1));
+      }
+
+      @include mdc-theme-dark(".mdc-textfield", true) {
+        @include mdc-ripple-fg((pseudo: "::after", base-color: white, opacity: .05));
+      }
+    }
   }
 
   &__menu {
@@ -99,6 +122,56 @@
       mdc-animation-exit-temporary(transform, 125ms);
     white-space: nowrap;
     overflow: hidden;
+  }
+}
+
+// TODO: move these rules into the normal .mdc-select block when all
+// versions of mdc-select inherit this style
+.mdc-select--box {
+  display: inline-flex;
+  position: relative;
+  height: 56px;
+  border-radius: 4px 4px 0 0;
+  background-color: rgba(black, .04);
+  overflow: hidden;
+
+  @include mdc-theme-dark(".mdc-textfield", true) {
+    background-color: rgba(white, .1);
+  }
+
+  &::before,
+  &::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: inherit;
+    content: "";
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  // NOTE: For some reasons, stylelint complains that the two patterns below don't follow BEM.
+  // However, it seems to emit the wrong selector for that pattern. Thus, we disable it above where
+  // we would normally disable it (&.mdc-textfield--disabled) as a workaround.
+
+  // stylelint-disable plugin/selector-bem-pattern
+  // TODO: Refactor this out once #194 lands
+  $opacity-duration: 83ms;
+
+  &::before {
+    transition: opacity 17ms linear, transform 0ms $opacity-duration+2 linear;
+  }
+
+  &:hover {
+    &::before {
+      transition:
+        opacity $opacity-duration linear 17ms,
+        transform 250ms $mdc-animation-deceleration-curve-timing-function 17ms;
+      opacity: 1;
+    }
   }
 }
 
